--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,9 +1,9 @@
-name: Build and Push Docker Image to GCR
+name: Build and Push Web Docker Image to GCR
 
 on:
   push:
     branches:
-      - main
+      - master
 
 jobs:
   build:
@@ -13,23 +13,13 @@ jobs:
       - name: Checkout source code
         uses: actions/checkout@v3
 
-      - name: Set up JDK 17
-        uses: actions/setup-java@v3
-        with:
-          java-version: '17'
-          distribution: 'temurin'
-
-      - name: Build with Maven
-        run: ./mvnw clean package -DskipTests -PMySQL
-
       - name: Authenticate to Google Cloud
         uses: google-github-actions/auth@v2
         with:
           credentials_json: ${{ secrets.GCR_CREDENTIALS }}
 
-      - name: Set up Docker credentials for GCR
-        run: |
-          gcloud auth configure-docker
+      - name: Configure Docker to use gcloud credentials
+        run: gcloud auth configure-docker gcr.io
 
       - name: Build and push Docker image to GCR
         uses: docker/build-push-action@v5
@@ -37,20 +27,20 @@ jobs:
           context: .
           file: ./Dockerfile
           push: true
-          tags: gcr.io/${{ secrets.GCP_PROJECT_ID }}/petclinic:${{ github.sha }}
-      
+          tags: gcr.io/kdt1-finalproject/web_ci:${{ github.sha }}
+
       - name: Update Helm appVersion and tag with numeric version
         run: |
-          CURRENT_TAG=$(grep "tag:" was/values.yaml | awk '{print $2}')
+          CURRENT_TAG=$(grep "tag:" web/values.yaml | awk '{print $2}')
           NEXT_TAG=$((CURRENT_TAG + 1))
 
-          sed -i "s/^  tag: .*/  tag: $NEXT_TAG/" was/values.yaml
-          sed -i "s/^appVersion: .*/appVersion: \"$NEXT_TAG\"/" was/Chart.yaml
+          sed -i "s/^  tag: .*/  tag: $NEXT_TAG/" web/values.yaml
+          sed -i "s/^appVersion: .*/appVersion: \"$NEXT_TAG\"/" web/Chart.yaml
 
-      - name: Commit Helm update
+      - name: Commit and Push updated Helm values
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
-          git add was/Chart.yaml was/values.yaml
-          git commit -m "Update WAS Helm tag to $SHORT_SHA"
+          git add web/Chart.yaml web/values.yaml
+          git commit -m "Update Web Helm tag to $SHORT_SHA"
           git push
