--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -35,13 +35,13 @@ jobs:
 
       - name: Update deployment.yaml with new image tag
         run: |
-          sed -i "s|image: gcr.io/kdt1-finalproject/web_ci:.*|image: gcr.io/kdt1-finalproject/web_ci:${{ env.TAG }}|" k8s/web/deployment.yaml
+          sed -i "s|image: gcr.io/kdt1-finalproject/web_ci:.*|image: gcr.io/kdt1-finalproject/web_ci:${{ env.TAG }}|" k8s/web/web-deployment.yaml
 
       - name: Commit and push updated deployment.yaml
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
-          git add k8s/web/deployment.yaml
+          git add k8s/web/web-deployment.yaml
           git commit -m "Update web deployment image to ${{ env.TAG }}"
           git push
 
